--- a/TestRunner/makefile
+++ b/TestRunner/makefile
@@ -39,7 +39,8 @@ TEST_FILES = TestArrayList.cpp \
              TestCircularBuffer.cpp \
              TestMainLoop.cpp \
 			 TestImageBuffer.cpp \
-			 TestFlashMemoryAdapters.cpp \
+			 TestCachedImageBuffer.cpp \
+			 TestImageBufferAccess.cpp \
 			 TestCyphalSubscriptions.cpp
 
 SRC_FILES = ../Src/Logger.cpp \
@@ -97,14 +98,14 @@ $(BIN_DIR)/TestCyphal : $(BIN_DIR)/TestCyphal.o $(BIN_DIR)/mock_hal.o # Link the
 	@echo "Linking $@"
 	$(CXX) $(CXXFLAGS) $(INCLUDE_PATHS) $(LIBS_PATH) -o $@ $(BIN_DIR)/TestCyphal.o $(BIN_DIR)/mock_hal.o $(LIBS)
 
-# Rule for TestFlashMemoryAdapters with extra sources
-$(BIN_DIR)/TestFlashMemoryAdapters.o : TestFlashMemoryAdapters.cpp
+# Rule for TestImageBufferAccess.cpp with extra sources
+$(BIN_DIR)/TestImageBufferAccess.o : TestImageBufferAccess.cpp
 	@echo "Compiling $<"
 	$(CXX) -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
-$(BIN_DIR)/TestFlashMemoryAdapters : $(BIN_DIR)/TestFlashMemoryAdapters.o $(BIN_DIR)/mock_hal.o # Link the object file
+$(BIN_DIR)/TestImageBufferAccess : $(BIN_DIR)/TestImageBufferAccess.o $(BIN_DIR)/mock_hal.o # Link the object file
 	@echo "Linking $@"
-	$(CXX) $(CXXFLAGS) $(INCLUDE_PATHS) $(LIBS_PATH) -o $@ $(BIN_DIR)/TestFlashMemoryAdapters.o $(BIN_DIR)/mock_hal.o $(LIBS)
+	$(CXX) $(CXXFLAGS) $(INCLUDE_PATHS) $(LIBS_PATH) -o $@ $(BIN_DIR)/TestImageBufferAccess.o $(BIN_DIR)/mock_hal.o $(LIBS)
 
 # Rule for TestTask with extra sources
 $(BIN_DIR)/TestTask.o : TestTask.cpp
@@ -284,6 +285,15 @@ $(BIN_DIR)/TestImageBuffer.o : TestImageBuffer.cpp
 $(BIN_DIR)/TestImageBuffer : $(BIN_DIR)/TestImageBuffer.o $(BIN_DIR)/mock_hal.o
 	@echo "Linking $@"
 	$(CXX) $(CXXFLAGS) $(INCLUDE_PATHS) $(LIBS_PATH) -o $@ $(BIN_DIR)/TestImageBuffer.o $(BIN_DIR)/mock_hal.o $(LIBS)
+
+# Rule for TestCachedImageBuffer with extra sources
+$(BIN_DIR)/TestCachedImageBuffer.o : TestCachedImageBuffer.cpp
+	@echo "Compiling $<"
+	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+
+$(BIN_DIR)/TestCachedImageBuffer : $(BIN_DIR)/TestCachedImageBuffer.o $(BIN_DIR)/mock_hal.o
+	@echo "Linking $@"
+	$(CXX) $(CXXFLAGS) $(INCLUDE_PATHS) $(LIBS_PATH) -o $@ $(BIN_DIR)/TestCachedImageBuffer.o $(BIN_DIR)/mock_hal.o $(LIBS)
 
 # Generic rule for all other tests
 $(BIN_DIR)/%.o : %.cpp
