--- a/TestRunner/makefile
+++ b/TestRunner/makefile
@@ -16,16 +16,21 @@ LIBS =				-lcanardd -lserardd -ludpardd -lo1heapd
 
 # Source and object files
 TEST_FILES = TestArrayList.cpp \
+			 TestBoxSet.cpp \
+			 TestBoxSetIterator.cpp \
 			 TestCachedImageBuffer.cpp \
+			 TestCircularBuffer.cpp \
 			 TestCyphal.cpp \
 			 TestCyphalSubscriptions.cpp \
 			 TestImageBuffer.cpp \
 			 TestImageBufferAccessor.cpp \
 			 TestLogger.cpp \
 			 TestLoggerCyphal.cpp \
+			 TestMainLoop.cpp \
 			 TestMockHal.cpp \
 			 TestO1HeapAllocator.cpp \
-			 TestPowerManager.cpp \
+			 TestPowerMonitor.cpp \
+			 TestPowerSwitch.cpp \
 			 TestProcessRxQueue.cpp \
 			 TestRegistrationManager.cpp \
 			 TestServiceManager.cpp \
@@ -38,19 +43,15 @@ TEST_FILES = TestArrayList.cpp \
 			 TestTaskRespondGetInfo.cpp \
 			 TestTaskSendHeartBeat.cpp \
 			 TestTaskSendNodePortList.cpp \
-			 TestTaskSubscribeNodePortList.cpp \
-             TestBoxSet.cpp \
-             TestBoxSetIterator.cpp \
-             TestCircularBuffer.cpp \
-             TestMainLoop.cpp
+			 TestTaskSubscribeNodePortList.cpp
 
 SRC_FILES = ../Src/Logger.cpp \
-            ../Src/RegistrationManager.cpp \
-            ../Src/ServiceManager.cpp \
+			../Src/RegistrationManager.cpp \
+			../Src/ServiceManager.cpp \
 			../Src/TaskBlinkLED.cpp \
 			../Src/TaskCheckMemory.cpp \
 			../Src/ImageBuffer.cpp \
-            ../Src/mock_hal.c
+			../Src/mock_hal.c
 
 # Extract the names for the targets from the source files
 TEST_NAMES = $(TEST_FILES:.cpp=)
@@ -148,7 +149,7 @@ $(BIN_DIR)/LoggerCyphal.o : ../Src/Logger.cpp
 # Rule for TestServiceManager with extra sources
 $(BIN_DIR)/TestServiceManager.o : TestServiceManager.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestServiceManager : $(BIN_DIR)/TestServiceManager.o $(BIN_DIR)/ServiceManager.o $(BIN_DIR)/mock_hal.o
 	@echo "Linking $@"
@@ -156,12 +157,12 @@ $(BIN_DIR)/TestServiceManager : $(BIN_DIR)/TestServiceManager.o $(BIN_DIR)/Servi
 
 $(BIN_DIR)/ServiceManager.o : ../Src/ServiceManager.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 # Rule for TestTaskRegistrationSubscription with extra sources
 $(BIN_DIR)/TestTaskRegistrationSubscription.o : TestTaskRegistrationSubscription.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestTaskRegistrationSubscription : $(BIN_DIR)/TestTaskRegistrationSubscription.o $(BIN_DIR)/RegistrationManager.o $(BIN_DIR)/ServiceManager.o $(BIN_DIR)/mock_hal.o
 	@echo "Linking $@"
@@ -170,7 +171,7 @@ $(BIN_DIR)/TestTaskRegistrationSubscription : $(BIN_DIR)/TestTaskRegistrationSub
 # Rule for TestTaskSendHeartBeat with extra sources
 $(BIN_DIR)/TestTaskSendHeartBeat.o : TestTaskSendHeartBeat.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestTaskSendHeartBeat : $(BIN_DIR)/TestTaskSendHeartBeat.o $(BIN_DIR)/RegistrationManager.o $(BIN_DIR)/mock_hal.o
 	@echo "Linking $@"
@@ -179,7 +180,7 @@ $(BIN_DIR)/TestTaskSendHeartBeat : $(BIN_DIR)/TestTaskSendHeartBeat.o $(BIN_DIR)
 # Rule for TestTaskSendNodePortList with extra sources
 $(BIN_DIR)/TestTaskSendNodePortList.o : TestTaskSendNodePortList.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestTaskSendNodePortList : $(BIN_DIR)/TestTaskSendNodePortList.o $(BIN_DIR)/TaskCheckMemory.o $(BIN_DIR)/TaskBlinkLED.o $(BIN_DIR)/RegistrationManager.o $(BIN_DIR)/mock_hal.o
 	@echo "Linking $@"
@@ -188,7 +189,7 @@ $(BIN_DIR)/TestTaskSendNodePortList : $(BIN_DIR)/TestTaskSendNodePortList.o $(BI
 # Rule for TestTaskSubscribeNodePortList with extra sources
 $(BIN_DIR)/TestTaskSubscribeNodePortList.o : TestTaskSubscribeNodePortList.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestTaskSubscribeNodePortList : $(BIN_DIR)/TestTaskSubscribeNodePortList.o $(BIN_DIR)/ServiceManager.o $(BIN_DIR)/RegistrationManager.o $(BIN_DIR)/mock_hal.o
 	@echo "Linking $@"
@@ -197,7 +198,7 @@ $(BIN_DIR)/TestTaskSubscribeNodePortList : $(BIN_DIR)/TestTaskSubscribeNodePortL
 # Rule for TestTaskRespondGetInfo with extra sources
 $(BIN_DIR)/TestTaskRespondGetInfo.o : TestTaskRespondGetInfo.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestTaskRespondGetInfo : $(BIN_DIR)/TestTaskRespondGetInfo.o $(BIN_DIR)/ServiceManager.o $(BIN_DIR)/RegistrationManager.o $(BIN_DIR)/mock_hal.o
 	@echo "Linking $@"
@@ -206,7 +207,7 @@ $(BIN_DIR)/TestTaskRespondGetInfo : $(BIN_DIR)/TestTaskRespondGetInfo.o $(BIN_DI
 # Rule for TestTaskRequestGetInfo with extra sources
 $(BIN_DIR)/TestTaskRequestGetInfo.o : TestTaskRequestGetInfo.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestTaskRequestGetInfo : $(BIN_DIR)/TestTaskRequestGetInfo.o $(BIN_DIR)/ServiceManager.o $(BIN_DIR)/RegistrationManager.o $(BIN_DIR)/mock_hal.o
 	@echo "Linking $@"
@@ -215,11 +216,11 @@ $(BIN_DIR)/TestTaskRequestGetInfo : $(BIN_DIR)/TestTaskRequestGetInfo.o $(BIN_DI
 # Rule for TestTaskBlinkLED with extra sources
 $(BIN_DIR)/TestTaskBlinkLED.o : TestTaskBlinkLED.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TaskBlinkLED.o : ../Src/TaskBlinkLED.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestTaskBlinkLED : $(BIN_DIR)/TestTaskBlinkLED.o $(BIN_DIR)/TaskBlinkLED.o $(BIN_DIR)/RegistrationManager.o $(BIN_DIR)/mock_hal.o
 	@echo "Linking $@"
@@ -228,11 +229,11 @@ $(BIN_DIR)/TestTaskBlinkLED : $(BIN_DIR)/TestTaskBlinkLED.o $(BIN_DIR)/TaskBlink
 # Rule for TestTaskCheckMemory with extra sources
 $(BIN_DIR)/TestTaskCheckMemory.o : TestTaskCheckMemory.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TaskCheckMemory.o : ../Src/TaskCheckMemory.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestTaskCheckMemory : $(BIN_DIR)/TestTaskCheckMemory.o $(BIN_DIR)/mock_hal.o $(BIN_DIR)/RegistrationManager.o $(BIN_DIR)/TaskCheckMemory.o
 	@echo "Linking $@"
@@ -241,7 +242,7 @@ $(BIN_DIR)/TestTaskCheckMemory : $(BIN_DIR)/TestTaskCheckMemory.o $(BIN_DIR)/moc
 # Rule for TestMainLoop with extra sources
 $(BIN_DIR)/TestMainLoop.o : TestMainLoop.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestMainLoop : $(BIN_DIR)/TestMainLoop.o $(BIN_DIR)/Logger.o $(BIN_DIR)/mock_hal.o $(BIN_DIR)/TaskCheckMemory.o $(BIN_DIR)/TaskBlinkLED.o $(BIN_DIR)/ServiceManager.o $(BIN_DIR)/RegistrationManager.o
 	@echo "Linking $@"
@@ -250,7 +251,7 @@ $(BIN_DIR)/TestMainLoop : $(BIN_DIR)/TestMainLoop.o $(BIN_DIR)/Logger.o $(BIN_DI
 # Rule for TestProcessRxQueue with extra sources
 $(BIN_DIR)/TestProcessRxQueue.o : TestProcessRxQueue.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestProcessRxQueue : $(BIN_DIR)/TestProcessRxQueue.o $(BIN_DIR)/RegistrationManager.o $(BIN_DIR)/Logger.o $(BIN_DIR)/mock_hal.o $(BIN_DIR)/ServiceManager.o
 	@echo "Linking $@"
@@ -259,11 +260,11 @@ $(BIN_DIR)/TestProcessRxQueue : $(BIN_DIR)/TestProcessRxQueue.o $(BIN_DIR)/Regis
 # Rule for TestRegistrationManager with extra sources
 $(BIN_DIR)/TestRegistrationManager.o : TestRegistrationManager.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/RegistrationManager.o : ../Src/RegistrationManager.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestRegistrationManager : $(BIN_DIR)/TestRegistrationManager.o $(BIN_DIR)/RegistrationManager.o $(BIN_DIR)/mock_hal.o
 	@echo "Linking $@"
@@ -272,7 +273,7 @@ $(BIN_DIR)/TestRegistrationManager : $(BIN_DIR)/TestRegistrationManager.o $(BIN_
 # Rule for TestSubscriptionManager with extra sources
 $(BIN_DIR)/TestSubscriptionManager.o : TestSubscriptionManager.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestSubscriptionManager : $(BIN_DIR)/TestSubscriptionManager.o $(BIN_DIR)/mock_hal.o
 	@echo "Linking $@"
@@ -281,7 +282,7 @@ $(BIN_DIR)/TestSubscriptionManager : $(BIN_DIR)/TestSubscriptionManager.o $(BIN_
 # Rule for TestImageBuffer with extra sources
 $(BIN_DIR)/TestImageBuffer.o : TestImageBuffer.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestImageBuffer : $(BIN_DIR)/TestImageBuffer.o $(BIN_DIR)/mock_hal.o
 	@echo "Linking $@"
@@ -290,22 +291,29 @@ $(BIN_DIR)/TestImageBuffer : $(BIN_DIR)/TestImageBuffer.o $(BIN_DIR)/mock_hal.o
 # Rule for TestCachedImageBuffer with extra sources
 $(BIN_DIR)/TestCachedImageBuffer.o : TestCachedImageBuffer.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
 $(BIN_DIR)/TestCachedImageBuffer : $(BIN_DIR)/TestCachedImageBuffer.o $(BIN_DIR)/mock_hal.o
 	@echo "Linking $@"
 	$(CXX) $(CXXFLAGS) $(INCLUDE_PATHS) $(LIBS_PATH) -o $@ $(BIN_DIR)/TestCachedImageBuffer.o $(BIN_DIR)/mock_hal.o $(LIBS)
 
-# Rule for TestPowerManager with extra sources
-$(BIN_DIR)/TestPowerManager.o : TestPowerManager.cpp
+# Rule for TestPowerSwitch with extra sources
+$(BIN_DIR)/TestPowerSwitch.o : TestPowerSwitch.cpp
 	@echo "Compiling $<"
-	$(CXX)  -c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
-$(BIN_DIR)/TestPowerManager : $(BIN_DIR)/TestPowerManager.o $(BIN_DIR)/mock_hal.o
+$(BIN_DIR)/TestPowerSwitch : $(BIN_DIR)/TestPowerSwitch.o $(BIN_DIR)/mock_hal.o
 	@echo "Linking $@"
-	$(CXX) $(CXXFLAGS) $(INCLUDE_PATHS) $(LIBS_PATH) -o $@ $(BIN_DIR)/TestPowerManager.o $(BIN_DIR)/mock_hal.o $(LIBS)
+	$(CXX) $(CXXFLAGS) $(INCLUDE_PATHS) $(LIBS_PATH) -o $@ $(BIN_DIR)/TestPowerSwitch.o $(BIN_DIR)/mock_hal.o $(LIBS)
 
+# Rule for TestPowerMonitor with extra sources
+$(BIN_DIR)/TestPowerMonitor.o : TestPowerMonitor.cpp
+	@echo "Compiling $<"
+	$(CXX)	-c $< $(CXXFLAGS) $(INCLUDE_PATHS) -o $@
 
+$(BIN_DIR)/TestPowerMonitor : $(BIN_DIR)/TestPowerMonitor.o $(BIN_DIR)/mock_hal.o
+	@echo "Linking $@"
+	$(CXX) $(CXXFLAGS) $(INCLUDE_PATHS) $(LIBS_PATH) -o $@ $(BIN_DIR)/TestPowerMonitor.o $(BIN_DIR)/mock_hal.o $(LIBS)
 
 # Generic rule for all other tests
 $(BIN_DIR)/%.o : %.cpp
